--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 body {
-  @apply m-2;
+  @apply text-white dark:bg-gray-800;
 }
 
-div,
+main {
+  @apply flex gap-2;
+}
+
 input {
   @apply m-1;
 }
@@ -16,7 +19,7 @@ h1 {
 }
 
 button {
-  @apply m-1 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+  @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
 }
 
 input {
@@ -26,4 +29,28 @@ input {
 /* https://github.com/tailwindlabs/tailwindcss/discussions/5969 */
 .button-submit {
   @apply bg-blue-500;
+}
+
+nav {
+  @apply bg-white border-gray-200 dark:bg-gray-900;
+
+  ul {
+    @apply font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700;
+  }
+
+  .menu {
+    @apply w-full md:block md:w-auto;
+  }
+
+  .hamburger {
+    @apply inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600;
+  }
+}
+
+nav > div {
+  @apply max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4;
+
+  ul > li {
+    @apply block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent;
+  }
 }
