--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+  .debug {
+    border: 1px solid red;
+  }
+}
+
+/*
+* {
+  outline: 1px red solid;
+}
+*/
+
 
 body {
-  @apply text-white dark:bg-gray-800;
+  @apply bg-white text-primary;
 }
 
 main {
   @apply flex gap-2;
+}
+
+a {
+  @apply text-black hover:text-gray-600;
 }
 
 input {
@@ -19,7 +35,7 @@ h1 {
 }
 
 button {
-  @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+  @apply bg-malachite-500 hover:bg-malachite-600 text-white font-bold py-2 px-4 rounded-full;
 }
 
 input {
@@ -28,14 +44,18 @@ input {
 
 /* https://github.com/tailwindlabs/tailwindcss/discussions/5969 */
 .button-submit {
-  @apply bg-blue-500;
+  @apply bg-malachite-500 hover:bg-malachite-600;
 }
 
 nav {
-  @apply bg-white border-gray-200 dark:bg-gray-900;
+  @apply border;
 
   ul {
-    @apply font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700;
+    @apply font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0;
+  }
+
+  li {
+    @apply my-auto;
   }
 
   .menu {
@@ -47,10 +67,12 @@ nav {
   }
 }
 
+/*
 nav > div {
-  @apply max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4;
+  @apply debug max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4;
 
   ul > li {
     @apply block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent;
   }
 }
+*/
