--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,12 +14,17 @@
 */
 
 
+html, body {
+  height: 100%;
+}
+
 body {
-  @apply bg-white text-primary;
+  @apply bg-white text-primary flex flex-col justify-between;
 }
 
 main {
-  @apply flex gap-2;
+  @apply flex gap-2 bg-white;
+  height: 80%;
 }
 
 a {
@@ -31,7 +36,8 @@ input {
 }
 
 h1 {
-  @apply m-1 font-bold;
+  @apply text-4xl font-bold mx-auto;
+  width: 70%;
 }
 
 button {
@@ -39,7 +45,7 @@ button {
 }
 
 input {
-  @apply shadow appearance-none border rounded py-2 px-3 text-gray-700 leading-tight;
+  @apply shadow appearance-none border rounded-full py-2 px-3 text-gray-700 leading-tight;
 }
 
 /* https://github.com/tailwindlabs/tailwindcss/discussions/5969 */
@@ -47,8 +53,21 @@ input {
   @apply bg-malachite-500 hover:bg-malachite-600;
 }
 
+.wizard-header {
+  @apply bg-white;
+}
+
+.wizard-content {
+  @apply rounded-3xl bg-gin p-8;
+  width: 600px;
+
+  div {
+    @apply p-3;
+  }
+}
+
 nav {
-  @apply border;
+  @apply bg-white border;
 
   ul {
     @apply font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0;
@@ -64,6 +83,14 @@ nav {
 
   .hamburger {
     @apply inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600;
+  }
+}
+
+footer {
+  @apply bg-primary text-white;
+
+  div {
+    @apply mx-auto w-full;
   }
 }
 
